--- a/cnn_results.tex
+++ b/cnn_results.tex
@@ -906,7 +906,7 @@ The calculated cross-sections are then:
 \sigma_{\text{CNN100000}} = \frac{7606-1401}{.30*3.917E^{31}*3.555E^{10}} = 1.48 \pm 0.023 (stat) * 10^{-38}\\
 \sigma_{\text{CNN100000 modified}} = \frac{2569-296}{.139*3.917E^{31}*3.555E^{10}} = 1.17 \pm 0.028 (stat) * 10^{-38}\\
 \end{equation}
-These selection cross-sections are plotted in figure \ref{fig:xsec} with the rest of the cross-section world data. Only statistical error is shown, and $X_{err}$ is the spread of the mean neutrino energy from the BNB $\nu_{\mu}$ flux plot shown in figure \ref{fig:xsecflux}. Systematic errors still need to be calculated, but these datapoints are the starting point and give an idea of each of the selection's potential cross-section compared to the world data.
+These selection cross-sections are plotted in figure \ref{fig:xsec} with the rest of the cross-section world data. Only statistical error is shown, and $X_{err}$ is the spread of the mean neutrino energy from the BNB $\nu_{\mu}$ flux plot shown in figure \ref{fig:xsecflux}. Comparing these results to the technote MC performance study for an early $\nu_{\mu}$ charged-current inclusive analysis with MicroBooNE \cite{mc-cc-inclusive}, there are differences in the mean neutrino energy spread and $X_{err}$. A couple of reasons for this is that the MC performance study was done on montecarlo and not data, the event selection in the early study evolved into what is now Selection I, and the mean neutrino energy was calculated only for energies above 0.4 GeV while this analysis used all neutrino energies. Systematic errors still need to be calculated, but these datapoints are the starting point and give an idea of each of the selection's potential cross-section compared to the world data.
 
 \begin{figure}[htp!]
 \centering
