--- a/example.bib
+++ b/example.bib
@@ -666,6 +666,14 @@ number = {MICROBOONE-NOTE-1010-PUB},
 month = {July},
 year = {2016}
 }
+@techreport{mc-cc-inclusive,
+collaboration = {MicroBooNE},
+title = {MC performance study for an early $\nu_{\mu}$ charged-current inclusive analysis with MicroBooNE},
+author    = "Acciari, R. et al.",
+number = {MICROBOONE-NOTE-1004-PUB},
+month = {November},
+year = {2015}
+}
 @techreport{neutrinoid,
 collaboration = {MicroBooNE},
 title = {First neutrino interactions observed with the MicroBooNE Liquid-Argon TPC detector},
