--- a/example.tex
+++ b/example.tex
@@ -161,6 +161,12 @@ May, 2018\\
 
 %% Produce the appendices
 \renewcommand{\appendixname}{Curriculum Vitae}
+\setcounter{chapter}{0}
+\setcounter{page}{127}
+%\renewcommand{\appendixname}{}
+\renewcommand{\thechapter}{}
+\renewcommand\thesection{\arabic{section}}
+%\addcontentsline{toc}{chapter}{Curriculum Vitae}
 \begin{appendices}
   \input{cv}
 \end{appendices}
