--- a/frontmatter.tex
+++ b/frontmatter.tex
@@ -4,6 +4,7 @@
 
 %% Declaration
 \begin{declaration}
+%\setcounter{page}{4}
   I dedicate this dissertation to the two most important women in my life; my mom and my wife. Mom, you taught me how to stand up for myself, how to trust in my abilities, and that hard work always pays off. Em, you've been and continue to be my rock, steadying me as I questioned whether or not I could do this, loving me through all the late nights and keeping me sane. Both have been there cheering me on giving me strength and love as I worked towards the hardest thing I've ever accomplished.  
 
   \vspace*{1cm}
@@ -29,6 +30,7 @@
 %\clearpage
 %% Acknowledgements
 \begin{acknowledgements}
+%\setcounter{page}{5}
   Of the many people who deserve thanks, some are particularly prominent,
   such as my advisor Mitch Soderberg who took a chance on me and supported me even though I struggled through the courses. Katherine, thanks for always lending an ear to bounce off ideas, answering all my questions and for being my best friend. Duncan Brown, thank you for seeing that there was potential in me and for helping me get through the hurdle that was Quals. Fabian, thank you for studying for the Quals with me. Without your infectious optimism I wouldn't have made it. To Richard Cardenas, thanks for being the first person to introduce me to physics as a career choice and for supporting me when no one believed I could double major in Electrical Engineering and Applied Physics in 4 years. Lastly, thank you Jedidah Isler for showing me that it is possible for a woman of color to succeed in this field and for taking a vested interest in my success.     
 \end{acknowledgements}
